external-crates/move/crates/move-compiler/tests/move_check/unit_test/cross_module_members_non_test_function.exp
error[E03004]: unbound type
   ┌─ tests/move_check/unit_test/cross_module_members_non_test_function.move:23:23
   │
23 │     public fun bad(): Foo {
   │                       ^^^ Unbound type 'Foo' in current scope

error[E03006]: unexpected name in this position
   ┌─ tests/move_check/unit_test/cross_module_members_non_test_function.move:24:9
   │
24 │         A::build_foo()
   │         ^^^^^^^^^^^^ Unexpected module identifier. A module identifier is not a valid expression
   │
   = The fully-qualified name is '@A::build_foo'

